Fixed endpoint predict input format to JSON.

--- a/notebooks/deploy_model.ipynb
+++ b/notebooks/deploy_model.ipynb
@@ -18,13 +18,13 @@
     "import sagemaker\n",
     "from sagemaker.estimator import Estimator\n",
     "from sagemaker import get_execution_role\n",
-    "from sagemaker.predictor import csv_serializer\n",
+    "from sagemaker.predictor import csv_serializer, json_serializer\n",
     "\n",
-    "image_tag = 'test-autogluon'\n",
+    "\n",
     "sess = sagemaker.Session()\n",
-    "role = 'arn:aws:iam::514965996716:role/service-role/AmazonSageMaker-ExecutionRole-20181229T135829'# get_execution_role()\n",
+    "role = 'arn:aws:iam::<your-sagemaker-role>:role/service-role/AmazonSageMaker-ExecutionRole-20181229T135829'# get_execution_role()\n",
     "account = sess.boto_session.client('sts').get_caller_identity()['Account']\n",
-    "region = sess.boto_session.region_name\n"
+    "region = sess.boto_session.region_name"
    ]
   },
   {
@@ -35,15 +35,6 @@
    "source": [
     "training_data = 's3://autogluon/datasets/Inc/train.csv'\n",
     "test_data = 's3://autogluon/datasets/Inc/test.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !aws s3 cp s3://autogluon/datasets/Inc/test.csv s3://datafy-data-lake-public-artifacts/Inc/"
    ]
   },
   {
@@ -79,7 +70,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor = sm_model.deploy(1, 'ml.m4.xlarge', serializer=csv_serializer)"
+    "predictor = sm_model.deploy(1, 'ml.m4.xlarge', serializer=json_serializer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('s3://datafy-data-lake-public-artifacts/Inc/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = df.head()[['age', 'workclass', 'fnlwgt', 'education', 'education-num',\n",
+    "       'marital-status', 'occupation', 'relationship', 'race', 'sex',\n",
+    "       'capital-gain', 'capital-loss', 'hours-per-week', 'native-country']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "record = data.head(1).T.to_dict()[0]\n",
+    "\n",
+    "payload = json.dumps(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "d = predictor.predict(payload)"
    ]
   },
   {
